	draggable)
	* UI/WebServerResources/ContactsUI.js: Fixed Drag&Drop issue (header was
	draggable)
	* UI/WebServerResources/MailerUI.js: Revert
	* UI/WebServerResources/ContactsUI.js: Revert
	* UI/WebServerResources/MailerUI.js: Fixed Mantis #45
	* UI/WebServerResources/ContactsUI.js: Fixed Mantis #45
	* UI/MailerUI/UIxMailListView.m: Made "Size" column sortable

2009-07-03  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalListingActions.m (-eventsBlocksAction): added
	sanity checks to avoid crashes when quick fields were wrongly
	parsed.

	* SoObjects/SOGo/LDAPUserManager.m (_fillContactMailRecords:): if
	the user uid contains a "@", we set it directly as system email
	rather than suffixing it with the default mail domain.

2009-07-02  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/MailerUI/UIxMailListView.m ([UIxMailListView
	-columnsDisplayOrder]): added the size column to the default columns.

2009-07-02  Cyril Robert <crobert@inverse.ca>

	* UI/MailerUI/UIxMailFolderActions.m: Added auto-subscribe on imap folder
	creation.

2009-07-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	(-lookupName:inContext:acquire:): handle "AsTask" and
	"AsAppointment" url suffix only for the default "so" handler.

2009-07-01  Cyril Robert <crobert@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m: Remove color from user settings on
	unsubscribe.
	* SoObjects/SOGo/SOGoGCSFolder.m: Re-fixed to also remove from InactiveFolders
	and FolderSyncTags.
	* UI/MailerUI/UIxMailFolderActions.m (_trashedURLOfFolder:withCO:): Fixed
	issue when deleting a folder with the same name as one already in the Trash.

2009-06-30  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/MailPartViewers/UIxMailPartICalActions.m
	([UIxMailPartICalActions -addToCalendarAction]): new method to add
	a calendar from an invitation (used to work?!).

	* SoObjects/SOGo/NSString+Utilities.m ([NSString